--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster%7COpen+Sans" />
     <link rel="stylesheet" href="css/styles.css" />
     <title>NuCamp: A Better Way To Camp</title>
 </head>
@@ -15,7 +15,7 @@
 
     <header class="jumbotron jumbotron-fluid">
         <div class="container">
-            <div class= "row">
+            <div class="row">
                 <div class="col">
                     <h1>NuCamp</h1>
                     <h2>a better way to camp</h2>
@@ -30,13 +30,16 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="nucampNavbar">
-        <ul class="navbar-nav">
-            <li class="nav-item active"><a class="nav-link" href="#"><i class="fa fa-home fa-lg"></i> Home</a></li>
-            <li class="nav-item"><a class="nav-link" href="aboutus.html"><i class="fa fa-info fa-lg"></i> About</a></li>
-            <li class="nav-item"><a class="nav-link" href="#"><i class="fa fa-list fa-lg"></i> Sites</a></li>
-            <li class="nav-item"><a class="nav-link" href="#"><i class="fa fa-address-card fa-lg"></i> Contact</a></li>
-        </ul>
-        </div>
+                <ul class="navbar-nav">
+                    <li class="nav-item active"><a class="nav-link" href="#"><i class="fa fa-home fa-lg"></i> Home</a>
+                    </li>
+                    <li class="nav-item"><a class="nav-link" href="aboutus.html"><i class="fa fa-info fa-lg"></i>
+                            About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#"><i class="fa fa-list fa-lg"></i> Sites</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#"><i class="fa fa-address-card fa-lg"></i>
+                            Contact</a></li>
+                </ul>
+            </div>
         </div>
     </nav>
 
@@ -47,7 +50,8 @@
             </div>
             <div class="col">
                 <h3>Our Campsites</h3>
-                <p class="d-none d-sm-block">Explore our growing database of curated campsites and leave your own reviews!</p>
+                <p class="d-none d-sm-block">Explore our growing database of curated campsites and leave your own
+                    reviews!</p>
             </div>
         </div>
         <div class="row row-content align-items-center">
@@ -56,8 +60,9 @@
             </div>
             <div class="col">
                 <h3>React Lake Campground</h3>
-                <p class="d-none d-sm-block">Nestled in the foothills of the Chrome Mountains, this campground on the shores of the pristine React Lake is
-                a favorite for fly fishers.</p>
+                <p class="d-none d-sm-block">Nestled in the foothills of the Chrome Mountains, this campground on the
+                    shores of the pristine React Lake is
+                    a favorite for fly fishers.</p>
             </div>
         </div>
         <div class="row row-content align-items-center">
@@ -66,19 +71,20 @@
             </div>
             <div class="col">
                 <h3>Bootstrap Outfitters</h3>
-                <p class="d-none d-sm-block">Bootstrap Outfitters supplies you with gear you need at prices you can't beat.</p>
+                <p class="d-none d-sm-block">Bootstrap Outfitters supplies you with gear you need at prices you can't
+                    beat.</p>
             </div>
         </div>
     </div>
 
     <footer>
         <div class="container">
-            <div class class="row">
-                <div class="col col-4 col-sm-2 offset-1">
+            <div class="row">
+                <div class="col-4 col-sm-2 offset-1">
                     <h5>Links</h5>
                     <ul class="list-unstyled">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="aboutus.html">About</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="#">About</a></li>
                         <li><a href="#">Sites</a></li>
                         <li><a href="#">Contact</a></li>
                     </ul>
@@ -92,7 +98,7 @@
                 </div>
                 <div class="col-sm-4 text-center">
                     <i class="fa fa-phone fa-lg text-primary"></i> 1-206-555-1234<br />
-                      <i class="fa fa-envelope fa-lg text-primary"></i> campsites@nucamp.co
+                    <i class="fa fa-envelope fa-lg text-primary"></i> campsites@nucamp.co
                 </div>
             </div>
         </div>
