--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
                     <h2>a better way to camp</h2>
                 </div>
                 <div class="col col-md-4 col-xl-2 col-xs-12 mt-4">
-                    <a class="text-nowrap"><button class="btn btn-lg bg-info text-white" href="#reserveForm">Reserve
-                            Campsite</button></a>
+                    <a class="btn btn-lg bg-info text-white text-wrap" href="#reserveForm">Reserve Campsite</a>
                 </div>
             </div>
         </div>
@@ -84,7 +83,7 @@
                     a favorite for fly fishers.</p>
             </div>
             <div class="col">
-                <img class="d-flex mr-auto" src="img/react-lake-thumb.jpg">
+                <img class="d-flex mr-auto" src="img/react-lake-thumb.jpg" alt="react-lake-thumb">
             </div>
         </div>
         <div class="row row-content align-items-center">
@@ -128,12 +127,12 @@
                                 <label for="date"
                                     class="col col-sm-6 col-md-6 col-lg-6 col-xl-6 col-xs-12 col-form-label">Date</label>
                                 <div class="col col-sm-6 col-md-6 col-lg-6 col-xl-6 col-xs-12">
-                                    <input type="date" id="date" name="date" placeholder="Date">
+                                    <input type="date" id="date" name="date">
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col">
-                                    <button type="submit" class="btn btn-primary" class="form-control">Search</button>
+                                    <button type="submit" class="btn btn-primary form-control">Search</button>
                                 </div>
                             </div>
                         </form>
