--- a/index.html
+++ b/index.html
@@ -26,7 +26,13 @@
                     <h2>a better way to camp</h2>
                 </div>
                 <div class="col col-md-4 col-xl-2 col-xs-12 mt-4">
-                    <a class="btn btn-lg bg-info text-white text-wrap" href="#reserveForm" data-toggle="tooltip" data-placement="bottom" data-html="true" title="Or call us at <br/><strong>1-206-555-1234</strong>">Reserve Campsite</a>
+<!--TOOLTIP-->
+                    <a 
+                        class="btn btn-lg bg-info text-white text-wrap" href="#reserveForm" 
+                        data-toggle="tooltip" data-placement="bottom" data-html="true"
+                        title="Or call us at <br/><strong>1-206-555-1234</strong>">
+                        Reserve Campsite
+                    </a>
                 </div>
             </div>
         </div>
@@ -181,6 +187,7 @@
         
 
     <script>
+/* Function Code for Tooltip*/
         $(function () {
             $('[data-toggle="tooltip"]').tooltip()
         })
