--- a/trying.html
+++ b/trying.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-<!--HEADER-->
+    <!--HEADER-->
     <header class="jumbotron jumbotron-fluid">
         <div class="container">
             <div class="row">
@@ -28,7 +28,7 @@
             </div>
         </div>
     </header>
-            
+
     <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
         <div class="container">
             <a class="navbar-brand" href="index.html"><img src="img/logo.png" height="30" width="30" alt="logo"></a>
@@ -40,10 +40,13 @@
             </button>
             <div class="collapse navbar-collapse" id="nucampNavbar">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link" href="index.html"><i class="fa fa-home fa-lg"></i>Home</a></li>
-                    <li class="nav-item active"><a class="nav-link" href="aboutus.html"><i class="fa fa-info fa-lg"></i> About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html"><i class="fa fa-home fa-lg"></i>Home</a>
+                    </li>
+                    <li class="nav-item active"><a class="nav-link" href="aboutus.html"><i class="fa fa-info fa-lg"></i>
+                            About</a></li>
                     <li class="nav-item"><a class="nav-link" href="#"><i class="fa fa-list fa-lg"></i> Sites</a></li>
-                    <li class="nav-item"><a class="nav-link" href="contactus.html"><i class="fa fa-address-card fa-lg"></i>Contact</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contactus.html"><i
+                                class="fa fa-address-card fa-lg"></i>Contact</a></li>
                 </ul>
             </div>
         </div>
@@ -65,10 +68,14 @@
         <div class="row row-content">
             <div class="col-sm-6">
                 <h3>Our Mission</h3>
-                <p>We present a curated database of the best campsites in the vast woods and backcountry of the World Wide Web
-                    Wilderness. We increase access to adventure for the public while promoting safe and respectful use of
-                    resources. The expert wilderness trekkers on our staff personally verify each campsite to make sure that
-                    they are up to our standards. We also present a platform for campers to share reviews on campsites they have
+                <p>We present a curated database of the best campsites in the vast woods and backcountry of the World
+                    Wide Web
+                    Wilderness. We increase access to adventure for the public while promoting safe and respectful use
+                    of
+                    resources. The expert wilderness trekkers on our staff personally verify each campsite to make sure
+                    that
+                    they are up to our standards. We also present a platform for campers to share reviews on campsites
+                    they have
                     visited with each other.</p>
             </div>
             <div class="col-sm-6">
@@ -91,7 +98,8 @@
             <div class="col">
                 <div class="card bg-light mt-3">
                     <blockquote class="blockquote card-body">
-                        <p class="mb-0">I will not follow where the path may lead, but I will go where there is no path, and I
+                        <p class="mb-0">I will not follow where the path may lead, but I will go where there is no path,
+                            and I
                             will leave a trail.</p>
                         <footer class="blockquote-footer">Muriel Strode,
                             <cite title="Source Title">"Wind-Wafted Wild Flowers" -
@@ -102,59 +110,74 @@
                 </div>
             </div>
         </div>
-<!--BELOW IS THE ACCORDION LESSON-->
+        <!--BELOW IS THE ACCORDION LESSON-->
         <div>
             <div>
-                <h3 class="accordionHeader">Community Partners</h3>
-                <div id="accordion">
-                    <div role="tab" class="card">
-                        <div class="card-header">
-                            <h4>
-                                <a data-toggle="collapse" data-target="#bootstrap">Bootstrap Outfitters <small>Outdoor Gear Specialists</small></a>
-                            </h4>
-                        <div class="collapse show" id="bootstrap" data-parent="#accordion">
-                        <div class="card-body">
-                            <p class="d-none d-sm-block">Bootstrap Outfitters supplies you with the gear you need at prices you
-                            can't beat.</p>
-                        </div>
-                        </div>
-                        </div>
-                    </div>
-                    <div role="tab" class="card">
-                        <div class="card-header">
-                            <h4>
-                                <a class="collapsed" data-toggle="collapse" data-target="#git">Git Out Expeditions <small>Group Adventure Expeditions</small></a>
-                            </h4>
-                            <div class="collapse" id="git" data-parent="#accordion">
-                            <div class="card-body">
-                                <p class="d-none d-sm-block">Join Git Out Expeditions to explore new horizons with a group of other
-                                adventurers!</p>
+                <h3>Community Partners</h3>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+                                <div class="panel panel-default">
+                                    <div class="panel-heading" role="tab" id="headingOne">
+                                        <h4 class="panel-title">
+                                            <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne"
+                                                aria-expanded="true" aria-controls="collapseOne">
+                                                Section-1
+                                            </a>
+                                        </h4>
+                                    </div>
+                                    <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel"
+                                        aria-labelledby="headingOne">
+                                        <div class="panel-body">
+                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque lacinia lacinia mauris,
+                                                at ultricies leo ornare nec. Vivamus eu est vel felis dignissim tempor. Nulla facilisi.
+                                                Duis molestie tortor ac tempor volutpat. Phasellus nec mi aliquet, sollicitudin neque
+                                                eget, consectetur libero. Vestibulum sollicitudin sapien libero, egestas tempus eros
+                                                scelerisque eu.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="panel panel-default">
+                                    <div class="panel-heading" role="tab" id="headingTwo">
+                                        <h4 class="panel-title">
+                                            <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion"
+                                                href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                                Section-2
+                                            </a>
+                                        </h4>
+                                    </div>
+                                    <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+                                        <div class="panel-body">
+                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque lacinia lacinia mauris,
+                                                at ultricies leo ornare nec. Vivamus eu est vel felis dignissim tempor. Nulla facilisi.
+                                                Duis molestie tortor ac tempor volutpat. Phasellus nec mi aliquet, sollicitudin neque
+                                                eget, consectetur libero. Vestibulum sollicitudin sapien libero, egestas tempus eros
+                                                scelerisque eu.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="panel panel-default">
+                                    <div class="panel-heading" role="tab" id="headingThree">
+                                        <h4 class="panel-title">
+                                            <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion"
+                                                href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                                Section-3
+                                            </a>
+                                        </h4>
+                                    </div>
+                                    <div id="collapseThree" class="panel-collapse collapse" role="tabpanel"
+                                        aria-labelledby="headingThree">
+                                        <div class="panel-body">
+                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque lacinia lacinia mauris,
+                                                at ultricies leo ornare nec. Vivamus eu est vel felis dignissim tempor. Nulla facilisi.
+                                                Duis molestie tortor ac tempor volutpat. Phasellus nec mi aliquet, sollicitudin neque
+                                                eget, consectetur libero. Vestibulum sollicitudin sapien libero, egestas tempus eros
+                                                scelerisque eu.</p>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div role="tab" class="card">
-                        <div class="card-header">
-                            <h4>
-                                <a class="collapsed" data-toggle="collapse" data-target="#mongo">Mongo Fly Shop <small>Your Neighborhood Fly Fishing Shop</small></a>
-                            </h4>
-                            <div class="collapse" id="mongo" data-parent="#accordion">
-                            <div class="card-body">
-                                <p class="d-none d-sm-block">Need a new fishing pole, a tacklebox, or flies of all kinds? Stop by Mongo Fly Shop.</p>
-                            </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div role="tab"class="card">
-                        <div class="card-header">
-                            <h4>
-                                <a class="collapsed" data-toggle="collapse" data-target="#node">Node Outdoor Apparel <small>Outdoor Clothes & Shoes</small></a>
-                            </h4>
-                        <div class="collapse" id="node" data-parent="#accordion">
-                        <div class="card-body">
-                            <p class="d-none d-sm-block">From polar fleeces to swimsuits, hiking boots to waders, a visit to Node will be sure to get you covered.</p>
-                        </div>
-                        </div>
                         </div>
                     </div>
                 </div>
@@ -215,14 +238,20 @@
                 </div>
                 <div class="col-6 col-sm-5 text-center">
                     <h5>Social</h5>
-                    <a class="btn btn-social-icon btn-instagram" href="http://instagram.com/"><i class="fa fa-instagram"></i></a>
-                    <a class="btn btn-social-icon btn-facebook" href="http://facebook.com/"><i class="fa fa-facebook"></i></a>
-                    <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><i class="fa fa-twitter"></i></a>
-                    <a class="btn btn-social-icon btn-google" href="http://youtube.com/"><i class="fa fa-youtube"></i></a>
+                    <a class="btn btn-social-icon btn-instagram" href="http://instagram.com/"><i
+                            class="fa fa-instagram"></i></a>
+                    <a class="btn btn-social-icon btn-facebook" href="http://facebook.com/"><i
+                            class="fa fa-facebook"></i></a>
+                    <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><i
+                            class="fa fa-twitter"></i></a>
+                    <a class="btn btn-social-icon btn-google" href="http://youtube.com/"><i
+                            class="fa fa-youtube"></i></a>
                 </div>
                 <div class="col-sm-4 text-center">
-                    <a role="button" class="btn btn-link" href="tel:+12065551234"><i class="fa fa-phone"></i> 1-206-555-1234</a><br />
-                    <a role="button" class="btn btn-link" href="mailto:campsites@nucamp.co"><i class="fa fa-envelope-o"></i>
+                    <a role="button" class="btn btn-link" href="tel:+12065551234"><i class="fa fa-phone"></i>
+                        1-206-555-1234</a><br />
+                    <a role="button" class="btn btn-link" href="mailto:campsites@nucamp.co"><i
+                            class="fa fa-envelope-o"></i>
                         campsites@nucamp.co</a>
                 </div>
             </div>
@@ -231,20 +260,6 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-
-
-
-    <!--TEST CODE-->
-    <body>
-        <div id="container">
-            <div id="content">
-                <div class="galleryContainer">
-                    <div class="galleryItem">
-                        <p>this is text which needs to appear inside box when hovering</p>
-                    </div>
-                </div>
-            </div>
-        </div>
 </body>
 
 </html>
