Bootstrap and jQuery Part 2: added comments to Javascript for play/pause button

--- a/index.html
+++ b/index.html
@@ -297,16 +297,16 @@
 <!--carousel Pause/Play buttons script part 2-->
     <script>
         $(function () {
-            $(".carousel").carousel({ interval: 2000 });
-            $("#carouselButton").click(function () {
-                if ($("#carouselButton").children("i").hasClass("fa-pause")) {
-                    $(".carousel").carousel("pause");
-                    $("#carouselButton").children("i").removeClass("fa-pause");
-                    $("#carouselButton").children("i").addClass("fa-play");
-                } else {
-                    $(".carousel").carousel("cycle");
-                    $("#carouselButton").children("i").removeClass("fa-play");
-                    $("#carouselButton").children("i").addClass("fa-pause");
+            $(".carousel").carousel({ interval: 2000 }); //sets carousel to change between slides at 2 seconds/2000ms
+            $("#carouselButton").click(function () { //defines what happens when you click #carouselButton
+                if ($("#carouselButton").children("i").hasClass("fa-pause")) { //if the carouselButton has a fa-pause class...
+                    $(".carousel").carousel("pause"); //Pause the Carousel
+                    $("#carouselButton").children("i").removeClass("fa-pause"); //Then take the fa-pause class out
+                    $("#carouselButton").children("i").addClass("fa-play"); //replace it with an fa-play class
+                } else { //if not
+                    $(".carousel").carousel("cycle"); //cycle through the carousel
+                    $("#carouselButton").children("i").removeClass("fa-play"); //take the fa-play class out
+                    $("#carouselButton").children("i").addClass("fa-pause"); //replace it with an fa-pause class
                 }
             });
         });
